[gd_scene load_steps=2 format=2]

[ext_resource path="res://SceneComponent/Actor/CameraController.gd" type="Script" id=1]

[node name="CameraController" type="RemoteTransform"]
update_rotation = false
script = ExtResource( 1 )

[node name="Camera" type="ClippedCamera" parent="."]
current = true

[node name="Pivot" type="Spatial" parent="."]

[node name="CameraTarget" type="Spatial" parent="Pivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.25 )

[node name="LookTarget" type="Spatial" parent="Pivot"]
